gap issue

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@
   }
   .slider {
     width: 100%;
-    padding-top: 20rem;
+    padding-top: 30rem;
     overflow: hidden;
     cursor: pointer;
   }
